--- a/variable_creation.ipynb
+++ b/variable_creation.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,30 +346,29 @@
     "    return len([par for par in text.split('\\n\\n') if par.strip()])\n",
     "\n",
     "def sentence_paragraph(text):\n",
-    "    pars = [par for par in test.split('\\n\\n') if par.strip()]\n",
+    "    pars = [par for par in text.split('\\n\\n') if par.strip()]\n",
     "    return statistics.mean([len(sent_tokenize(par)) for par in pars])\n",
     "\n",
     "def words_paragraph(text):\n",
-    "    pars = [par for par in test.split('\\n\\n') if par.strip()]\n",
+    "    pars = [par for par in text.split('\\n\\n') if par.strip()]\n",
     "    return statistics.mean([len(re.findall(r'\\b\\w+\\b', par)) for par in pars])\n",
     "\n",
     "def chars_paragraph(text):\n",
-    "    pars = [par for par in test.split('\\n\\n') if par.strip()]\n",
+    "    pars = [par for par in text.split('\\n\\n') if par.strip()]\n",
     "    return statistics.mean([len(par) for par in pars])\n",
     "\n",
     "def words_sentences(text):\n",
     "    sents = sent_tokenize(text)\n",
     "    return statistics.mean([len(word_tokenize(sentence)) for sentence in sents])\n",
-    "    \n",
     "\n",
-    "\n",
-    "\n",
-    "    "
+    "def uppercase_start(text):\n",
+    "    sents = sent_tokenize(text)\n",
+    "    return (sum(1 for sentence in sents if sentence[0].isupper()) / len(sents))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,14 +419,14 @@
     "    features['word_per_paragraph'] = dataframe[text_column].apply(words_paragraph)\n",
     "    features['character_per_paragraph'] = dataframe[text_column].apply(chars_paragraph)\n",
     "    features['word_per_sentence'] = dataframe[text_column].apply(words_sentences)\n",
-    "\n",
-    "\n",
+    "    features['ratio_sentencestart_uppercase'] = dataframe[text_column].apply(uppercase_start)\n",
+    "    \n",
     "    return features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +461,6 @@
        "      <th>c_frequency</th>\n",
        "      <th>d_frequency</th>\n",
        "      <th>...</th>\n",
-       "      <th>!_frequency</th>\n",
        "      <th>!{2,}_frequency</th>\n",
        "      <th>\\.{3}_frequency</th>\n",
        "      <th>number_lines</th>\n",
@@ -472,6 +470,7 @@
        "      <th>word_per_paragraph</th>\n",
        "      <th>character_per_paragraph</th>\n",
        "      <th>word_per_sentence</th>\n",
+       "      <th>ratio_sentencestart_uppercase</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -490,14 +489,14 @@
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>13.666667</td>\n",
-       "      <td>70</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>140.0</td>\n",
        "      <td>15.0</td>\n",
+       "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -513,15 +512,15 @@
        "      <td>0.028369</td>\n",
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.007092</td>\n",
        "      <td>4</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>13.666667</td>\n",
-       "      <td>70</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>69.5</td>\n",
        "      <td>14.0</td>\n",
+       "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -538,14 +537,14 @@
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>13.666667</td>\n",
-       "      <td>70</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>142.0</td>\n",
        "      <td>12.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -562,14 +561,14 @@
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>13.666667</td>\n",
-       "      <td>70</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>142.0</td>\n",
        "      <td>12.5</td>\n",
+       "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -586,14 +585,14 @@
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>13.666667</td>\n",
-       "      <td>70</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>123.0</td>\n",
        "      <td>14.5</td>\n",
+       "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -634,14 +633,14 @@
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>13.666667</td>\n",
-       "      <td>70</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>73.0</td>\n",
        "      <td>6.0</td>\n",
+       "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14162</th>\n",
@@ -658,14 +657,14 @@
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>13.666667</td>\n",
-       "      <td>70</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>78.0</td>\n",
        "      <td>14.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14163</th>\n",
@@ -680,16 +679,16 @@
        "      <td>0.014706</td>\n",
        "      <td>0.014706</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.044118</td>\n",
        "      <td>0.014706</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>13.666667</td>\n",
-       "      <td>70</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>68.0</td>\n",
        "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14164</th>\n",
@@ -706,14 +705,14 @@
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>13.666667</td>\n",
-       "      <td>70</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>124.0</td>\n",
        "      <td>18.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14165</th>\n",
@@ -730,18 +729,18 @@
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>13.666667</td>\n",
-       "      <td>70</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>11.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>14166 rows × 82 columns</p>\n",
+       "<p>14166 rows × 83 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -771,62 +770,62 @@
        "14164          0.129032        0.016129     0.080645     0.024194   \n",
        "14165          0.134328        0.029851     0.029851     0.029851   \n",
        "\n",
-       "       c_frequency  d_frequency  ...  !_frequency  !{2,}_frequency  \\\n",
-       "0         0.042857     0.028571  ...     0.000000         0.000000   \n",
-       "1         0.014184     0.028369  ...     0.000000         0.000000   \n",
-       "2         0.042254     0.028169  ...     0.000000         0.000000   \n",
-       "3         0.042254     0.021127  ...     0.000000         0.000000   \n",
-       "4         0.008130     0.008130  ...     0.000000         0.000000   \n",
-       "...            ...          ...  ...          ...              ...   \n",
-       "14161     0.027397     0.000000  ...     0.000000         0.000000   \n",
-       "14162     0.025641     0.012821  ...     0.000000         0.000000   \n",
-       "14163     0.014706     0.014706  ...     0.044118         0.014706   \n",
-       "14164     0.040323     0.008065  ...     0.000000         0.000000   \n",
-       "14165     0.029851     0.014925  ...     0.000000         0.000000   \n",
+       "       c_frequency  d_frequency  ...  !{2,}_frequency  \\.{3}_frequency  \\\n",
+       "0         0.042857     0.028571  ...         0.000000         0.000000   \n",
+       "1         0.014184     0.028369  ...         0.000000         0.007092   \n",
+       "2         0.042254     0.028169  ...         0.000000         0.000000   \n",
+       "3         0.042254     0.021127  ...         0.000000         0.000000   \n",
+       "4         0.008130     0.008130  ...         0.000000         0.000000   \n",
+       "...            ...          ...  ...              ...              ...   \n",
+       "14161     0.027397     0.000000  ...         0.000000         0.000000   \n",
+       "14162     0.025641     0.012821  ...         0.000000         0.000000   \n",
+       "14163     0.014706     0.014706  ...         0.014706         0.000000   \n",
+       "14164     0.040323     0.008065  ...         0.000000         0.000000   \n",
+       "14165     0.029851     0.014925  ...         0.000000         0.000000   \n",
        "\n",
-       "       \\.{3}_frequency  number_lines  number_sentences  number_paragraphs  \\\n",
-       "0             0.000000             1                 2                  1   \n",
-       "1             0.007092             4                 2                  2   \n",
-       "2             0.000000             1                 2                  1   \n",
-       "3             0.000000             1                 2                  1   \n",
-       "4             0.000000             1                 2                  1   \n",
-       "...                ...           ...               ...                ...   \n",
-       "14161         0.000000             1                 2                  1   \n",
-       "14162         0.000000             1                 1                  1   \n",
-       "14163         0.000000             1                 2                  1   \n",
-       "14164         0.000000             1                 1                  1   \n",
-       "14165         0.000000             1                 1                  1   \n",
+       "       number_lines  number_sentences  number_paragraphs  \\\n",
+       "0                 1                 2                  1   \n",
+       "1                 4                 2                  2   \n",
+       "2                 1                 2                  1   \n",
+       "3                 1                 2                  1   \n",
+       "4                 1                 2                  1   \n",
+       "...             ...               ...                ...   \n",
+       "14161             1                 2                  1   \n",
+       "14162             1                 1                  1   \n",
+       "14163             1                 2                  1   \n",
+       "14164             1                 1                  1   \n",
+       "14165             1                 1                  1   \n",
        "\n",
        "       sentences_per_paragraph  word_per_paragraph  character_per_paragraph  \\\n",
-       "0                            2           13.666667                       70   \n",
-       "1                            2           13.666667                       70   \n",
-       "2                            2           13.666667                       70   \n",
-       "3                            2           13.666667                       70   \n",
-       "4                            2           13.666667                       70   \n",
+       "0                          2.0                25.0                    140.0   \n",
+       "1                          1.5                13.0                     69.5   \n",
+       "2                          2.0                22.0                    142.0   \n",
+       "3                          2.0                23.0                    142.0   \n",
+       "4                          2.0                25.0                    123.0   \n",
        "...                        ...                 ...                      ...   \n",
-       "14161                        2           13.666667                       70   \n",
-       "14162                        2           13.666667                       70   \n",
-       "14163                        2           13.666667                       70   \n",
-       "14164                        2           13.666667                       70   \n",
-       "14165                        2           13.666667                       70   \n",
+       "14161                      2.0                10.0                     73.0   \n",
+       "14162                      1.0                12.0                     78.0   \n",
+       "14163                      2.0                11.0                     68.0   \n",
+       "14164                      1.0                17.0                    124.0   \n",
+       "14165                      1.0                11.0                     67.0   \n",
        "\n",
-       "       word_per_sentence  \n",
-       "0                   15.0  \n",
-       "1                   14.0  \n",
-       "2                   12.0  \n",
-       "3                   12.5  \n",
-       "4                   14.5  \n",
-       "...                  ...  \n",
-       "14161                6.0  \n",
-       "14162               14.0  \n",
-       "14163                8.0  \n",
-       "14164               18.0  \n",
-       "14165               11.0  \n",
+       "       word_per_sentence  ratio_sentencestart_uppercase  \n",
+       "0                   15.0                            0.5  \n",
+       "1                   14.0                            0.5  \n",
+       "2                   12.0                            0.0  \n",
+       "3                   12.5                            0.5  \n",
+       "4                   14.5                            0.5  \n",
+       "...                  ...                            ...  \n",
+       "14161                6.0                            0.5  \n",
+       "14162               14.0                            1.0  \n",
+       "14163                8.0                            0.0  \n",
+       "14164               18.0                            1.0  \n",
+       "14165               11.0                            1.0  \n",
        "\n",
-       "[14166 rows x 82 columns]"
+       "[14166 rows x 83 columns]"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,22 +836,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\"painters produced their most highly valued work when they were 41.92 years old\"\\nhttp://t.co/T8Gvom70GE\\n\\nSo... I\\'ve 15 years left for mine?\\t\\t'"
+       "['Things I want for my business cards but are too expensive: 3 PMS colors.',\n",
+       " 'colored edges, soft touch finish, raised spot UV, cut 45°corners.']"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_pan15_training.loc[1, 'text']"
+    "sent_tokenize(data_pan15_training.loc[0, 'text'])"
    ]
   },
   {
