changed file location

--- a/variable_creation.ipynb
+++ b/variable_creation.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_pan15_training = pd.read_csv('data\\PAN_15_training.csv')"
+    "data_pan15_training = pd.read_csv('data\\raw_data\\PAN_15_training.csv')"
    ]
   },
   {
